--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -452,7 +452,7 @@ section {
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #4154f1;
+    background: #241e5c;
     box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 
@@ -552,7 +552,7 @@ section {
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #4154f1;
+    background: #241e5c;
     box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
 }
 
@@ -656,6 +656,7 @@ section {
     font-size: 18px;
     color: #012970;
     font-weight: 700;
+    line-height:27px;
     margin: 0;
 }
 
@@ -663,14 +664,14 @@ section {
     line-height: 0;
     background: #ecf3ff;
     padding: 4px;
-    margin-right: 10px;
+    margin: 10px;
     font-size: 24px;
     border-radius: 3px;
     transition: 0.3s;
 }
 
 .features .feature-box:hover i {
-    background: #4154f1;
+    background: #241e5c;
     color: #fff;
 }
 
