--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -428,8 +428,9 @@ section {
 .hero {
     width: 100%;
     height: 100vh;
-    background: url(../img/hero-bg.png) top center no-repeat;
+    background: url(../img/index_home.jpg) top center no-repeat;
     background-size: cover;
+    /*opacity: 0.7;*/
 }
 
 .hero h1 {
